--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,7 +58,6 @@ main {
 	display:flex;
 	flex-direction:column;
 	background-image:url(../images/img-mission-background.jpeg);
-	background-size: 1200px 700px;
 	background-repeat: no-repeat;
 	height: 700px;
 	width: 1200px;
@@ -91,7 +90,7 @@ main {
 #feature {
 	display: flex;
 	flex-direction: column;
-	
+	margin-bottom: 60px;
 	}
 	
 #teaimg {
@@ -99,7 +98,7 @@ main {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between; 
+	justify-content: center; 
 	}
 	
 .flavorimg {
@@ -107,9 +106,41 @@ main {
 	width: 300px;
 	padding-bottom: 10px;
 	margin-bottom: 0;
+	margin-right: 25px;
 	}
 	
 .flavor h4 {
 	margin-top: 0;
 	padding-top: 0;
+	}
+	
+#locations {
+	display:flex;
+	flex-direction: column;
+	background-image: url(../images/img-locations-background.jpeg);
+	background-repeat: no-repeat;
+	background-position: 30% 20%;
+	width: 1200px;
+	height: 500px;
+	}
+	
+#locations h2 {
+	margin-top: 70px;
+	margin-bottom: 0px;
+	}
+	
+#loclist {
+	display: flex;
+	flex-direction: row;
+	align-content:center;
+	justify-content: center;
+	}
+	
+.address {
+	width: 300px;
+	background-color: black;
+	opacity: 1;
+	margin-right: 40px;
+	margin-top: 15px;
+	padding-bottom: 20px;
 	}
