--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,10 @@ body {
 	text-align:center;
 	margin: 0;
 	}
-	
+
+
+/* Header */	
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -50,9 +53,15 @@ nav a:visited {
 	text-decoration:underline;
 	}
 	
-main {
+	
+/* Main */
+	
+main, #mission, #feature, #locations  {
 	display: flex;
 	flex-direction:column;
+	}
+
+main {
 	justify-content: space-around;
 	align-items: center;
 	position: relative;
@@ -60,8 +69,6 @@ main {
 	}
 	
 #mission {
-	display:flex;
-	flex-direction:column;
 	background-image:url(../images/img-mission-background.jpeg);
 	background-repeat: no-repeat;
 	height: 700px;
@@ -93,15 +100,16 @@ main {
 	}
 	
 #feature {
-	display: flex;
-	flex-direction: column;
 	margin-bottom: 60px;
 	}
 	
-#teaimg {
-	width: 1000px;
+#teaimg, #loclist {
 	display: flex;
 	flex-direction: row;
+	}
+
+#teaimg {
+	width: 1000px;
 	flex-wrap: wrap;
 	justify-content: center; 
 	}
@@ -120,8 +128,6 @@ main {
 	}
 	
 #locations {
-	display:flex;
-	flex-direction: column;
 	background-image: url(../images/img-locations-background.jpeg);
 	background-repeat: no-repeat;
 	background-position: 30% 20%;
@@ -135,8 +141,6 @@ main {
 	}
 	
 #loclist {
-	display: flex;
-	flex-direction: row;
 	align-content:center;
 	justify-content: center;
 	}
@@ -149,6 +153,9 @@ main {
 	margin-top: 15px;
 	padding-bottom: 20px;
 	}
+	
+	
+/* Footer */
 	
 footer {
 	display: block;
@@ -166,12 +173,11 @@ footer {
 	margin-top: 0;
 	}
 	
-footer a:link {
+footer a:link, footer a:visited {
 	color: seashell;
 	text-decoration: none;
 	}
 	
-footer a:visited {
-	color: seashell;
-	text-decoration: none;
+address {
+	font-style: normal;
 	}
